Added a button to change the size of the grid size

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="heading">Etch-a-Sketch</div>
+    <div class="size-button">
+        <button class="size-button">Change Size</button>
+    </div>
     <div class="container"></div>
 </body>
 </html>
