Added two buttons to select color and a clear button to clear the grid

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <div class="size-button">
         <button class="size-button">Change Size</button>
     </div>
+    <div class="black-button">
+        <button id="blackButton">Black</button>
+    </div>
+    <div class="rainbow-button">
+        <button id="rainbowButton">Rainbow</button>
+    </div>
+    <div class="clear-button">
+        <button id="clearButton">Clear</button>
+    </div>
     <div class="container"></div>
 </body>
 </html>
