Added consistent selector methods for the buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="heading">Etch-a-Sketch</div>
     <div class="size-button">
-        <button class="size-button">Change Size</button>
+        <button id="sizeButton">Change Size</button>
     </div>
     <div class="black-button">
         <button id="blackButton">Black</button>
